# substrate-node-study-impl

./: Cargo.toml  README.md  aura.json  customSpec.json  customSpecRaw.json  gran.json
client/consensus/: Cargo.toml
client/consensus/src/: lib.rs
client/db/: Cargo.toml
client/mapping-sync/: Cargo.toml
client/rpc/: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs  service.rs
pallets/dynamic-fee/: Cargo.toml
pallets/dynamic-fee/src/: lib.rs
pallets/ethereum/: Cargo.toml
pallets/ethereum/src/: lib.rs
pallets/evm/: Cargo.toml
pallets/evm/src/: lib.rs  mock.rs
pallets/evm/src/runner/: stack.rs
pallets/template/src/: lib.rs
pallets/test/: Cargo.toml
pallets/test-pallet/: Cargo.toml
pallets/test-pallet/src/: lib.rs  mock.rs
pallets/test/src/: lib.rs  mock.rs
primitives/consensus/: Cargo.toml
primitives/evm/: Cargo.toml
primitives/rpc/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
