[package]
name = "fc-db"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier database backend"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-database]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.codec]
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.kvdb]
version = '0.9.0'

[dependencies.kvdb-rocksdb]
version = '0.11.0'

[dependencies.parking_lot]
version = "0.11.1"
